--- a/src/main/resources/com/example/client1/hello-view.fxml
+++ b/src/main/resources/com/example/client1/hello-view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client1.controller.MainController">
+<BorderPane maxHeight="600.0" maxWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client1.controller.MainController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
